# notte

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  BenchDockerfile  COPYRIGHT.md  Dockerfile  LICENSE  README.md  build.sh  makefile  partitions.ipynb  parttest.ipynb  pyproject.toml  quickstart.sh  requirements.txt  test.ipynb
.github/.github/workflows/: benchmark.yml  slack-monitor.yml  test-cicd.yml
.github/workflows/: benchmark.yml  docs-tests-cicd.yml.yml  nightly-examples.yml  nightly-test-release.yml  pypi-release.yml  slack-monitor.yml  test-cicd.yml  test.yml  translate-readme.yml
benchmarks/: README.md  benchmark_config.toml
docs/: CONTRIBUTING.md  change_local_config.md  run_notte_with_external_browsers.md  run_ollama_local_models.md  scraping_tutorial.md  sdk_tutorial.md  setup.md
docs/archives/: 20250307_README.md
docs/source/: conf.py
docs/sphinx/: conf.py  index.rst
docs/src/: deploy.sh  docs.json  tests.sh
docs/src/concepts/: agents.mdx  bua.mdx  operations.mdx  personas.mdx  sessions.mdx  vaults.mdx  workflows.mdx
docs/src/guides/: account_creation.mdx  reliability.mdx  scraping.mdx  stealth.mdx
docs/src/integrations/: cursor.mdx  langchain.mdx  mcp.mdx  openai-cua.mdx
docs/src/intro/: pricing.mdx  python-sdk.mdx  quickstart.mdx  what-is-notte.mdx
docs/src/tests/: test_docs_generation.py  test_snippets.py
docs/src/tutorials/: setup-2fa-github.mdx
eval/: patcher.py
eval/webvoyager/: eval.py  load_data.py
eval/webvoyager/data/: WebVoyager_data_short.jsonl  WebVoyager_data_simple.jsonl
examples/: README.md  agent.py  api.py  benchmarks.md  cli_agent.py  credentials.py  fastapi_agent.py  leetcode_agent.py  notifier_agent.py  quickstart.py  quickstart_launcher.py  requirements.txt  vault_agent.py  vault_example.json
examples/auth-vault-agent/: README.md  agent.py
examples/benchmark/: bench.py  browseruse.py  browseruse_eval.py  dashboard.py  default.py  evaluators.py  export_data.py  falco.py  falco_params.toml  params.toml  registry.py  run.py  screenshots.py  webvoyager.py
examples/email-notifier-agent/: README.md  agent.py
examples/falco/: agent.py  perception.py  prompt.py  types.py
examples/github-auto-issues-trending-repos/: README.md  agent.py
examples/github-auto-isues-trending-repos/: agent.py
examples/gufo/: agent.py  parser.py  perception.py  prompt.py
examples/human-in-the-loop/: README.md  agent.py
examples/landing-examples/: .env.example  landing_examples.py
examples/leetcode-agent/: README.md  agent.py
examples/order-on-ubereats/: README.md  agent.py
examples/pipistrello/: agent.py  parser.py  perception.py  prompt.py  system.md
examples/scrape-logo/: README.md  agent.py
examples/scrape-nike-products/: README.md  agent.py
examples/simple/: agent.py  perception.py  prompt.py  proxy.py  system_prompt.md  types.py
examples/star-our-repo/: README.md  agent.py
notte/: __init__.py  env.py
notte/actions/: base.py  code.py  execution_failure_debug.py  executor.py  parsing.py  space.py
notte/browser/: context.py  dom_tree.py  driver.py  id_generation.py  node_type.py  observation.py  pool.py  processed_snapshot.py  snapshot.py
notte/common/: agent.py  conversation.py  logging.py  parser.py  perception.py  prompt.py  proxy.py  safe_executor.py  tracer.py  trajectory_history.py  validator.py
notte/common/agent/: base.py  (+4 more)
notte/controller/: actions.py  base.py  proxy.py  space.py
notte/credentials/: models.py
notte/data/: space.py
notte/errors/: actions.py  base.py  browser.py  env.py  handler.py  llm.py  processing.py  provider.py  resolution.py  sdk.py  validation.py
notte/llms/: engine.py  logging.py  prompt.py  service.py
notte/password/: models.py  vault.py
notte/pipe/: README.md  data_extraction.py  data_scraping.py  document_category.py  filtering.py  listing.py  main.py  merging.py  resolution.py  validation.py
notte/sdk/: client.py  types.py
notte/utils/: image.py  partition.py  url.py
scripts/: check_forbidden_imports.sh  check_playwright_imports.sh  test_release.sh
src/notte/: __init__.py  env.py
src/notte_eval/: patcher.py  registry.py  run.py  screenshots.py  task_types.py
src/notte_pools/: base.py  cdp_pool.py  local_pool.py  ports.py
tests/: __init__.py  conftest.py  run_examples.sh  test_env.py  test_notte_config.toml  test_scraping.py  test_session.py  test_trajectory.py
tests/actions/: test_execution.py  test_form_fill.py  test_parsing.py
tests/agent/: reference_fail_completion_messages.json  reference_messages.json  test_consisent_trajectory.py  test_consistent_trajectory.py  test_main_agent.py  test_validator.py
tests/api/: test_endpoints.py
tests/browser/: test_clipboard_isolation.py  test_context.py  test_node_type.py  test_pool.py  test_screenshot_types.py  test_tools.py
tests/chapter/: test_agent_fallback.py  test_chapter.py
tests/code/: test_code.py
tests/config/: test_agent_config.py  test_cli_config.py  test_config.py  test_default_config.py  test_env_config.py
tests/data/: duckduckgo.html  github_signin.html
tests/docs/: test_snippets.py
tests/examples/: test_examples.py  test_readme.py
tests/files/: test_download.py  test_upload.py  text1.txt
tests/integration/: test_basic_scripts.py  test_e2e.py  test_resolution.py  test_special_actions.py  test_user_agent.py  test_webvoyager_resolution.py  test_webvoyager_scripts.py
tests/llms/: test_action_listing_prompt_discrepancies.py  test_engine.py  test_extract_data_prompt_discrepancies.py  test_prompt.py  test_structured_output.py
tests/mcp/: test_server.py
tests/mock/: mock_browser.py  mock_engine.py  mock_env.py  mock_service.py
tests/pipe/: test_listing.py  test_main.py
tests/scripts/: sample_script.py  test_validator.py
tests/sdk/: test_client.py  test_contextual_resources.py  test_dict_types.py  test_list.py  test_openapi_spec.py  test_replay_frames.py  test_types.py
tests/utils/: test_encryption.py  test_image.py  test_pydantic_utils.py  test_url.py
tracing/: snapshot_server.py  trace_logger.py
(+562 files in other folders)
