[project]
name = "notte"
version = "1.3.3"
requires-python = ">=3.11"
dependencies = [
    "notte-core",
    "notte-sdk",
    "notte-browser",
    "notte-agent",
    "notte-integrations",
    "notte-eval",
    "notte-pools",
]

[tool.uv.sources]
notte-core = { workspace = true }
notte-sdk = { workspace = true }
notte-browser = { workspace = true }
notte-agent = { workspace = true }
notte-integrations = { workspace = true }
notte-eval = { workspace = true }
notte-pools = { workspace = true }

[tool.uv.workspace]
members = ["packages/*", "."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/notte"]


[dependency-groups]

dev = [
    "aiomultiprocess>=0.9.1",
    "basedpyright>=1.27.1",
    "cloudpickle>=3.1.1",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "pandas",
    "pebble>=5.1.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
]
lint = [
    "ruff>=0.9.7",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
timeout = 60
asyncio_mode = "strict"
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning:sklearn.utils.fixes:",
    "ignore::DeprecationWarning:pandas.core.common:",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20:",
    "ignore::DeprecationWarning:importlib.resources._legacy:",
    "ignore::DeprecationWarning:litellm.utils:",
    "ignore:open_text is deprecated*:DeprecationWarning",
    "ignore:distutils Version classes are deprecated. Use packaging.version instead.*:DeprecationWarning",
    'ignore:configuration option "asyncio_default_fixture_loop_scope" is unset',
    "ignore:Valid config keys have changed in V2*:UserWarning"
]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [".venv"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.basedpyright]
exclude = [".venv", "uv-cache", "**/site-packages/**", "**/dist-packages/**", "tests", "old", "notebook", "dist"]
enableTypeIgnoreComments = true
reportIgnoreCommentWithoutRule = false
failOnWarnings = true
reportAny = false
reportExplicitAny = false
